fix(csv): ensure exporter link is hidden
The exporter link is used only in JavaScript as a handle to grab the
underlying element.  In this case, the element should be invisible to
the client.  This commit sets the display to be none accordingly.

--- a/client/src/less/bhima-bootstrap.less
+++ b/client/src/less/bhima-bootstrap.less
@@ -301,3 +301,7 @@ input[type=number] {-moz-appearance: textfield;}
   box-shadow : 0px 2px 4px -4px black;
   z-index : 1000;
 }
+
+.ui-grid-exporter-csv-link {
+  display : none;
+}
